--- a/style.css
+++ b/style.css
@@ -15,8 +15,24 @@
     --outgoing-chat-border: #343541;
     --incoming-chat-border: #444654;
 }
+.light-mode {
+    --text-color: #343541;
+    --icon-color: #a9a9bc;
+    --icon-hover-bg: #f1f1f3;
+    --placeholder-color: #9f9f9f;
+    --outgoing-chat-bg: #FFFFFF;
+    --incoming-chat-bg: #F7F7F8;
+    --outgoing-chat-border: #FFFFFF;
+    --incoming-chat-border: #D9D9E3;
+}
 body {
     background: var(--outgoing-chat-bg);
+}
+/* Chat container style*/
+.chat-container {
+    max-height: 100vh;
+    padding-bottom: 150px;
+    overflow-y: auto;
 }
 .chat-container .chat {
     padding: 25px 10px;
@@ -59,6 +75,7 @@ body {
 .chat .chat-details img {
     width: 35px;
     height: 35px;
+    align-self: flex-start;
     object-fit: cover;
     border-radius: 2px;
 }
